# Buma3DSamples2

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
Libraries/: CMakeLists.txt
Libraries/AppFramework/: CMakeLists.txt
Libraries/AppFramework/include/AppFramework/: Application.h  EventInterfaces.h  Framework.h  Platform.h  Window.h
Libraries/AppFramework/src/: Application.cpp  Framework.cpp  Platform.cpp  Window.cpp
Libraries/AppFramework/src/Platform/: PlatformSDL.cpp  PlatformSDL.h  PlatformWindows.cpp  PlatformWindows.h  WindowSDL.cpp  WindowSDL.h  WindowWindows.cpp  WindowWindows.h
Libraries/Buma3DHelpers/: CMakeLists.txt
Libraries/Buma3DHelpers/include/Buma3DHelpers/: B3DDescHash.h  B3DDescHelpers.h  B3DInit.h  Buma3DHelpers.h  FormatUtils.h
Libraries/Buma3DHelpers/src/: Buma3DHelpers.cpp  FormatUtils.cpp
Libraries/DeviceResources/: CMakeLists.txt
Libraries/DeviceResources/include/DeviceResources/: CommandListChain.h  CommandQueue.h  CopyContext.h  DeviceResources.h  Resource.h  ResourceBuffer.h  ResourceTexture.h  ShaderToolsConv.h  SwapChain.h
Libraries/DeviceResources/include/DeviceResources/private/: ResourceViewCache.h
Libraries/DeviceResources/src/: CommandQueue.cpp  CopyContext.cpp  DeviceResources.cpp  Disposer.h  Resource.cpp  ResourceBuffer.cpp  ResourceHeapAllocator.cpp  ResourceHeapAllocator.h  ResourceHeapProperties.h  ResourceTexture.cpp  StagingBufferPool.cpp  StagingBufferPool.h  SwapChain.cpp  VariableSizeAllocationsManager.cpp  VariableSizeAllocationsManager.h
Libraries/MyImgui/: CMakeLists.txt
Libraries/MyImgui/include/MyImgui/: MyImgui.h
Libraries/MyImgui/src/: Imgui_PS.hlsl  Imgui_VS.hlsl  MyImgui.cpp  MyImguiRenderer.cpp  MyImguiRenderer.h  Utils.h
Libraries/ShaderTools/: CMakeLists.txt
Libraries/ShaderTools/include/ShaderTools/: ShaderLoader.h  ShaderReflection.h
Libraries/ShaderTools/src/: ShaderLoader.cpp  ShaderReflection.cpp  hlsl.hlsl
Libraries/TextureLoads/: CMakeLists.txt
Libraries/TextureLoads/include/TextureLoads/: TextureLoads.h
Libraries/TextureLoads/src/: TextureLoads.cpp
Libraries/Utils/: CMakeLists.txt
Libraries/Utils/include/Utils/: Compiler.h  Definitions.h  LazyDelegate.h  Logger.h  NonCopyable.h  StepTimer.h  Utils.h
Libraries/Utils/include/Utils/private/: LoggerDetails.h
Libraries/Utils/src/: LazyDelegate.cpp  Logger.cpp  StepTimer.cpp  Utils.cpp
Samples/: CMakeLists.txt
Samples/Buma3DSamples/: CMakeLists.txt
Samples/Buma3DSamples/src/: Buma3DSamples.cpp
Samples/HelloConstantBuffer/: CMakeLists.txt
Samples/HelloConstantBuffer/include/HelloConstantBuffer/: HelloConstantBuffer.h
Samples/HelloConstantBuffer/shader/: PixelShader.hlsl  ShaderHeader.hlsli  VertexShader.hlsl
Samples/HelloConstantBuffer/src/: HelloConstantBuffer.cpp
Samples/HelloImGui/: CMakeLists.txt
Samples/HelloImGui/include/HelloImGui/: HelloImGui.h
Samples/HelloImGui/shader/: PixelShader.hlsl
Samples/HelloImGui/src/: HelloImGui.cpp
Samples/HelloTexture/: CMakeLists.txt
Samples/HelloTexture/include/HelloTexture/: HelloTexture.h
Samples/HelloTexture/shader/: PixelShader.hlsl  ShaderHeader.hlsli  VertexShader.hlsl
Samples/HelloTexture/src/: HelloTexture.cpp
Samples/HelloTriangle/: CMakeLists.txt
Samples/HelloTriangle/include/HelloTriangle/: HelloTriangle.h
Samples/HelloTriangle/shader/: VertexShader.hlsl
Samples/HelloTriangle/src/: HelloTriangle.cpp
Samples/SampleBase/: CMakeLists.txt
Samples/SampleBase/include/SampleBase/: SampleBase.h
Samples/SampleBase/src/: SampleBase.cpp
