cmake_minimum_required(VERSION 3.16)

add_subdirectory(${BMSAMP_LIBRARY_DIR}/Utils)
add_subdirectory(${BMSAMP_LIBRARY_DIR}/AppFramework)
add_subdirectory(${BMSAMP_LIBRARY_DIR}/Buma3DHelpers)
add_subdirectory(${BMSAMP_LIBRARY_DIR}/ShaderTools)
add_subdirectory(${BMSAMP_LIBRARY_DIR}/TextureLoads)
add_subdirectory(${BMSAMP_LIBRARY_DIR}/DeviceResources)
add_subdirectory(${BMSAMP_LIBRARY_DIR}/MyImgui)
